[gd_scene load_steps=35 format=3 uid="uid://cgff2q1lirw7t"]

[ext_resource type="Script" path="res://scripts/UI/match_ui.gd" id="1_i1hxe"]
[ext_resource type="Resource" uid="uid://d0e5uorq1a1rt" path="res://resources/events/victory_event_channel.tres" id="2_fwcwo"]
[ext_resource type="Resource" uid="uid://ceg0y65hkm0a2" path="res://resources/events/defeat_event_channel.tres" id="3_bimw1"]
[ext_resource type="Resource" uid="uid://c1hpycii541ab" path="res://resources/events/load_main_menu_event_channel.tres" id="4_12k3b"]
[ext_resource type="Theme" uid="uid://dx4axq65l727t" path="res://theme.tres" id="5_wvhhm"]
[ext_resource type="PackedScene" uid="uid://bp22mksxi8dw0" path="res://prefabs/turn_queue.tscn" id="6_m7c8m"]
[ext_resource type="PackedScene" uid="uid://c4ux05o5ugmaw" path="res://prefabs/ui/agent_panel.tscn" id="6_rbyna"]
[ext_resource type="PackedScene" uid="uid://dd6skvb0tvmwh" path="res://prefabs/agents/player_agent.tscn" id="6_xu7ma"]
[ext_resource type="Script" path="res://scripts/UI/match/agent_details_panel.gd" id="8_y0ba1"]
[ext_resource type="PackedScene" uid="uid://vwth8qa6lmwn" path="res://prefabs/agents/ai_agent.tscn" id="9_0ka0l"]
[ext_resource type="PhysicsMaterial" uid="uid://hlsflh436ngb" path="res://arena_wall_physics_material.tres" id="9_ub7xk"]
[ext_resource type="PackedScene" path="res://prefabs/ui/status_container.tscn" id="9_y4sxa"]
[ext_resource type="Texture2D" uid="uid://b80nmeo74k1hy" path="res://art/ui/main-menu/heart-icon.png" id="10_bhevk"]
[ext_resource type="Texture2D" uid="uid://ctupjkes4ls8i" path="res://art/ui/main-menu/sword-icon.png" id="11_shfb4"]
[ext_resource type="Texture2D" uid="uid://j17e03vwph15" path="res://art/ui/main-menu/helm-icon.png" id="12_lemv4"]
[ext_resource type="Texture2D" uid="uid://bvqf1pgluhqdi" path="res://art/ui/main-menu/items-tab/sword-icon.png" id="13_0lwy8"]
[ext_resource type="Texture2D" uid="uid://y8nf6ke8fdeq" path="res://art/ui/main-menu/items-tab/shield-icon.png" id="14_etr5o"]
[ext_resource type="Texture2D" uid="uid://dmidt3q743mlb" path="res://art/ui/main-menu/boots-icon.png" id="15_tksxi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxi2c"]
bg_color = Color(0.133333, 0.301961, 0.423529, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.690196, 0.768627, 0.886275, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n14gm"]
bg_color = Color(0.811765, 0.854902, 0.921569, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.52549, 0.596078, 0.694118, 1)
shadow_size = 2
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kduk5"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="PlaneMesh" id="PlaneMesh_04reb"]
size = Vector2(100, 200)

[sub_resource type="BoxMesh" id="BoxMesh_xmymu"]
size = Vector3(25, 10, 1)

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_v27cm"]
albedo_color = Color(1, 1, 0.12549, 1)

[sub_resource type="BoxMesh" id="BoxMesh_hw70v"]
size = Vector3(1, 10, 75)

[sub_resource type="BoxMesh" id="BoxMesh_phcmq"]
size = Vector3(20, 10, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5wy3x"]
size = Vector2(720, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktcmb"]
size = Vector2(720, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0usbo"]
size = Vector2(76.0001, 1173)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1g6g1"]
size = Vector2(78, 1167)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_680c4"]
size = Vector2(78, 255.973)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0qwsp"]
size = Vector2(78, 251.73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpf4v"]
size = Vector2(78, 239.002)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmb0g"]
size = Vector2(78, 254.558)

[node name="Node" type="Node"]

[node name="TurnQueue" parent="." instance=ExtResource("6_m7c8m")]
turn_time_in_secs = 10.0

[node name="MatchUI" type="CanvasLayer" parent="."]
script = ExtResource("1_i1hxe")
victory_event_channel = ExtResource("2_fwcwo")
defeat_event_channel = ExtResource("3_bimw1")
load_main_menu_event_channel = ExtResource("4_12k3b")
agent_panel_prefab = ExtResource("6_rbyna")

[node name="MatchEndPanel" type="Panel" parent="MatchUI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -285.0
offset_right = 224.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MatchUI/MatchEndPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -43.0
offset_right = 127.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_wvhhm")
theme_override_colors/font_color = Color(1, 0.424345, 0.957854, 1)
theme_override_font_sizes/font_size = 60
text = "Victory!!!"

[node name="BackButton" type="Button" parent="MatchUI/MatchEndPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.0
offset_top = -148.0
offset_right = 98.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_wvhhm")
text = "Back"

[node name="ButtomPanel" type="Panel" parent="MatchUI"]
offset_top = 1130.0
offset_right = 720.0
offset_bottom = 1280.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MatchUI/ButtomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="AgentsContainer" type="HBoxContainer" parent="MatchUI/ButtomPanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="AgentDetailsPanel" type="Panel" parent="MatchUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -325.0
offset_right = 250.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_y0ba1")
status_details_prefab = ExtResource("9_y4sxa")

[node name="MarginContainer" type="MarginContainer" parent="MatchUI/AgentDetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="MatchUI/AgentDetailsPanel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AgentStatsPanel" type="Panel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 255)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_wvhhm")
theme_override_styles/panel = SubResource("StyleBoxFlat_wxi2c")

[node name="MarginContainer" type="MarginContainer" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AgentHealthPanel" type="Panel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_wvhhm")
theme_override_styles/panel = SubResource("StyleBoxFlat_n14gm")

[node name="HBoxContainer" type="HBoxContainer" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer/AgentHealthPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer/AgentHealthPanel/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("10_bhevk")
expand_mode = 1
stretch_mode = 5

[node name="AgentHealth" type="RichTextLabel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer/AgentHealthPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_wvhhm")
bbcode_enabled = true
text = "[font_size=24][color=black]Hitpoints[/color]
50/50[/font_size]"

[node name="AgentSpeedPanel" type="Panel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_wvhhm")
theme_override_styles/panel = SubResource("StyleBoxFlat_n14gm")

[node name="HBoxContainer" type="HBoxContainer" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer/AgentSpeedPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer/AgentSpeedPanel/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("11_shfb4")
expand_mode = 1
stretch_mode = 5

[node name="AgentSpeed" type="RichTextLabel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer/AgentSpeedPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_wvhhm")
bbcode_enabled = true
text = "[font_size=24][color=black]Speed[/color]
50[/font_size]"

[node name="AgentDamagePanel" type="Panel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_wvhhm")
theme_override_styles/panel = SubResource("StyleBoxFlat_n14gm")

[node name="HBoxContainer" type="HBoxContainer" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer/AgentDamagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer/AgentDamagePanel/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("11_shfb4")
expand_mode = 1
stretch_mode = 5

[node name="AgentDamage" type="RichTextLabel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/AgentStatsPanel/MarginContainer/VBoxContainer/AgentDamagePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5_wvhhm")
bbcode_enabled = true
text = "[font_size=24][color=black]Damage[/color]
50[/font_size]"

[node name="MyItemsContainer" type="HBoxContainer" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 4
alignment = 1

[node name="HeadSlot" type="Panel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/MyItemsContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("5_wvhhm")
theme_override_styles/panel = SubResource("StyleBoxFlat_kduk5")

[node name="TextureRect" type="TextureRect" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/MyItemsContainer/HeadSlot"]
self_modulate = Color(0.67451, 0.67451, 0.67451, 0.666667)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -67.5
offset_right = 46.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_lemv4")
expand_mode = 1
stretch_mode = 5

[node name="RightHandSlot" type="Panel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/MyItemsContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("5_wvhhm")
theme_override_styles/panel = SubResource("StyleBoxFlat_kduk5")

[node name="TextureRect" type="TextureRect" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/MyItemsContainer/RightHandSlot"]
self_modulate = Color(0.67451, 0.67451, 0.67451, 0.666667)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -67.5
offset_right = 46.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_0lwy8")
expand_mode = 1
stretch_mode = 5

[node name="LeftHandSlot" type="Panel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/MyItemsContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("5_wvhhm")
theme_override_styles/panel = SubResource("StyleBoxFlat_kduk5")

[node name="TextureRect" type="TextureRect" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/MyItemsContainer/LeftHandSlot"]
self_modulate = Color(0.67451, 0.67451, 0.67451, 0.666667)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -67.5
offset_right = 46.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_etr5o")
expand_mode = 1
stretch_mode = 5

[node name="BootsSlot" type="Panel" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/MyItemsContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("5_wvhhm")
theme_override_styles/panel = SubResource("StyleBoxFlat_kduk5")

[node name="TextureRect" type="TextureRect" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer/MyItemsContainer/BootsSlot"]
self_modulate = Color(0.67451, 0.67451, 0.67451, 0.666667)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -67.5
offset_right = 46.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_tksxi")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer"]
layout_mode = 2
text = "Statuses"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusesContainer" type="HBoxContainer" parent="MatchUI/AgentDetailsPanel/MarginContainer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 720.0
offset_bottom = 1280.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(720, 1280)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 76.8757, 0)
current = true
fov = 70.0
size = 107.999

[node name="Arena" type="Node" parent="."]

[node name="Visuals" type="Node3D" parent="Arena"]

[node name="Floor" type="MeshInstance3D" parent="Arena/Visuals"]
mesh = SubResource("PlaneMesh_04reb")
skeleton = NodePath("../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Arena/Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.967, -49.24)
mesh = SubResource("BoxMesh_xmymu")
skeleton = NodePath("../Floor")
surface_material_override/0 = SubResource("ORMMaterial3D_v27cm")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Arena/Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.2826, 3.96698, -1.00532)
mesh = SubResource("BoxMesh_hw70v")
skeleton = NodePath("../Floor")
surface_material_override/0 = SubResource("ORMMaterial3D_v27cm")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Arena/Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.1662, 3.96698, -1.00532)
mesh = SubResource("BoxMesh_hw70v")
skeleton = NodePath("../Floor")
surface_material_override/0 = SubResource("ORMMaterial3D_v27cm")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Arena/Visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.96698, 48.5932)
mesh = SubResource("BoxMesh_xmymu")
skeleton = NodePath("../Floor")
surface_material_override/0 = SubResource("ORMMaterial3D_v27cm")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Arena/Visuals"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -17.6799, 3.96698, 42.2928)
mesh = SubResource("BoxMesh_phcmq")
skeleton = NodePath("../Floor")
surface_material_override/0 = SubResource("ORMMaterial3D_v27cm")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="Arena/Visuals"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 17.1586, 3.96698, 42.2928)
mesh = SubResource("BoxMesh_phcmq")
skeleton = NodePath("../Floor")
surface_material_override/0 = SubResource("ORMMaterial3D_v27cm")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Arena/Visuals"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -17.8423, 3.96698, -42.1436)
mesh = SubResource("BoxMesh_phcmq")
skeleton = NodePath("../Floor")
surface_material_override/0 = SubResource("ORMMaterial3D_v27cm")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="Arena/Visuals"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 17.5333, 3.96698, -42.1436)
mesh = SubResource("BoxMesh_phcmq")
skeleton = NodePath("../Floor")
surface_material_override/0 = SubResource("ORMMaterial3D_v27cm")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Arena/Visuals"]
transform = Transform3D(0.555643, 0, -0.831421, 0.161562, 0.980938, 0.107973, 0.815573, -0.19432, 0.545051, 0, 32.479, 0)

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="Arena/Visuals"]
transform = Transform3D(0.237513, -0.417048, 0.877302, -0.955094, 0.0644464, 0.28921, -0.177153, -0.906597, -0.383013, 0, 31.8438, 0)

[node name="Colliders" type="Node" parent="Arena"]

[node name="BottomWall" type="Node2D" parent="Arena/Colliders"]
position = Vector2(430, 1280)

[node name="StaticBody2D" type="StaticBody2D" parent="Arena/Colliders/BottomWall"]
collision_layer = 5
collision_mask = 5
physics_material_override = ExtResource("9_ub7xk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Colliders/BottomWall/StaticBody2D"]
position = Vector2(-70, -33)
shape = SubResource("RectangleShape2D_5wy3x")
debug_color = Color(0, 0.6, 0.701961, 0.235294)

[node name="TopWall" type="Node2D" parent="Arena/Colliders"]
position = Vector2(614, 70)

[node name="StaticBody2D" type="StaticBody2D" parent="Arena/Colliders/TopWall"]
collision_layer = 5
collision_mask = 5
physics_material_override = ExtResource("9_ub7xk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Colliders/TopWall/StaticBody2D"]
position = Vector2(-254, -39)
shape = SubResource("RectangleShape2D_ktcmb")
debug_color = Color(0, 0.6, 0.701961, 0.235294)

[node name="LeftWall" type="Node2D" parent="Arena/Colliders"]

[node name="StaticBody2D" type="StaticBody2D" parent="Arena/Colliders/LeftWall"]
collision_layer = 5
collision_mask = 5
physics_material_override = ExtResource("9_ub7xk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Colliders/LeftWall/StaticBody2D"]
position = Vector2(38, 640.5)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_0usbo")
debug_color = Color(0, 0.6, 0.701961, 0.235294)

[node name="RightWall" type="Node2D" parent="Arena/Colliders"]
position = Vector2(719, 795)

[node name="StaticBody2D" type="StaticBody2D" parent="Arena/Colliders/RightWall"]
collision_layer = 5
collision_mask = 5
physics_material_override = ExtResource("9_ub7xk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Colliders/RightWall/StaticBody2D"]
position = Vector2(-38, -156.5)
shape = SubResource("RectangleShape2D_1g6g1")
debug_color = Color(0, 0.6, 0.701961, 0.235294)

[node name="TopLeftCorner" type="Node2D" parent="Arena/Colliders"]
position = Vector2(54, 238)
rotation = 0.785398

[node name="StaticBody2D" type="StaticBody2D" parent="Arena/Colliders/TopLeftCorner"]
collision_layer = 5
collision_mask = 5
physics_material_override = ExtResource("9_ub7xk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Colliders/TopLeftCorner/StaticBody2D"]
position = Vector2(-38.0001, -139.3)
shape = SubResource("RectangleShape2D_680c4")
debug_color = Color(0, 0.6, 0.701961, 0.235294)

[node name="TopRightCorner" type="Node2D" parent="Arena/Colliders"]
position = Vector2(723, 192)
rotation = -0.785398

[node name="StaticBody2D" type="StaticBody2D" parent="Arena/Colliders/TopRightCorner"]
collision_layer = 5
collision_mask = 5
physics_material_override = ExtResource("9_ub7xk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Colliders/TopRightCorner/StaticBody2D"]
position = Vector2(-38, -149.907)
shape = SubResource("RectangleShape2D_0qwsp")
debug_color = Color(0, 0.6, 0.701961, 0.235294)

[node name="BottomLeftCorner" type="Node2D" parent="Arena/Colliders"]
position = Vector2(164, 1151)
rotation = -0.785398

[node name="StaticBody2D" type="StaticBody2D" parent="Arena/Colliders/BottomLeftCorner"]
collision_layer = 5
collision_mask = 5
physics_material_override = ExtResource("9_ub7xk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Colliders/BottomLeftCorner/StaticBody2D"]
position = Vector2(-38.0002, -16.9706)
shape = SubResource("RectangleShape2D_qpf4v")
debug_color = Color(0, 0.6, 0.701961, 0.235294)

[node name="BottomRightCorner" type="Node2D" parent="Arena/Colliders"]
position = Vector2(524, 1285)
rotation = 0.785398

[node name="StaticBody2D" type="StaticBody2D" parent="Arena/Colliders/BottomRightCorner"]
collision_layer = 5
collision_mask = 5
physics_material_override = ExtResource("9_ub7xk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena/Colliders/BottomRightCorner/StaticBody2D"]
position = Vector2(-38, -132.229)
shape = SubResource("RectangleShape2D_cmb0g")
debug_color = Color(0, 0.6, 0.701961, 0.235294)

[node name="PlayerAgent" parent="." instance=ExtResource("6_xu7ma")]
position = Vector2(190, 771)

[node name="AIAgent" parent="." instance=ExtResource("9_0ka0l")]
position = Vector2(423, 548)

[node name="AIAgent2" parent="." instance=ExtResource("9_0ka0l")]
position = Vector2(470, 918)

[connection signal="pressed" from="MatchUI/MatchEndPanel/BackButton" to="MatchUI" method="_on_back_button_pressed"]
